# Shadow-Fire-Game-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Config.cmake.in
Core/: CMakeLists.txt
Core/inc/: Asserts.h  Core.h  FileImporter.h  MinimalCore.h  MulticastDelegate.h
Core/inc/Containers/: SFObjectContainer.h
Core/inc/Input/: Controller.h  Gamepad.h  InputManager.h  Keycodes.h
Core/inc/Logging/: Log.h  LogManager.h  LogOutput.h
Core/inc/Math/: Bounds.h  Constants.h  Matrix4x4.h  Quaternion.h  Random.h  Transform.h  Vector.h
Core/inc/Platform/Windows/: PostWindowsInclude.h  PreWindowsInclude.h
Core/inc/Profiling/: ScopedProfiler.h  TimedProfiler.h
Core/src/Input/: Gamepad.cpp  InputManager.cpp
Core/src/Logging/: Log.cpp  LogManager.cpp  LogOutput.cpp
Core/src/Math/: Matrix4x4.cpp  Quaternion.cpp  Random.cpp  Transform.cpp  Vector.cpp
Core/src/Profiling/: ScopedProfiler.cpp  TimedProfiler.cpp
DX11Renderer/: CMakeLists.txt
DX11Renderer/inc/: DX11Material.h  DX11Mesh.h  DX11Pipeline.h  DX11Renderer.h  DX11Shader.h  DX11VertexBuffer.h  DX11Window.h  ShaderIncluder.h
DX11Renderer/inc/Texture/: DX11Texture2D.h
DX11Renderer/src/: DX11Material.cpp  DX11Mesh.cpp  DX11Pipeline.cpp  DX11Renderer.cpp  DX11Shader.cpp  DX11VertexBuffer.cpp  DX11Window.cpp  ShaderIncluder.cpp
DX11Renderer/src/Texture/: DX11Texture2D.cpp
Editor/: CMakeLists.txt
Editor/docs/: Asset serialization format.txt
Editor/inc/: Editor.h  EditorGame.h  Project.h
Editor/resources/: resources.aps
Editor/src/: Editor.cpp  EditorGame.cpp  Project.cpp
Engine/: CMakeLists.txt
Engine/inc/: Application.h  Engine.h  Game.h  GameObject.h  SFGUID.h  SFObject.h  Scene.h  TickManager.h
Engine/inc/Assets/: AssetCache.h  AssetFactory.h  AssetType.h  SerializedAsset.h
Engine/inc/Components/: Component.h  MeshComponent.h  SceneComponent.h  SkeletalMeshComponent.h  StaticMeshComponent.h  UIComponent.h
Engine/inc/Logging/: ConsoleLogger.h
Engine/inc/StreamBuffers/: FileBuffer.h  StreamBuffer.h
Engine/src/: Application.cpp  Engine.cpp  Game.cpp  GameObject.cpp  SFGUID.cpp  SFObject.cpp  Scene.cpp  TickManager.cpp
Engine/src/Assets/: AssetCache.cpp  AssetFactory.cpp  SerializedAsset.cpp
Engine/src/Components/: Component.cpp  MeshComponent.cpp  SceneComponent.cpp  SkeletalMeshComponent.cpp  StaticMeshComponent.cpp  UIComponent.cpp
Engine/src/Logging/: ConsoleLogger.cpp
GameRuntime/: CMakeLists.txt
GameRuntime/src/: GameRuntime.cpp
OpenGLRenderer/: CMakeLists.txt
OpenGLRenderer/inc/: OpenGLInputManager.h  OpenGLMaterial.h  OpenGLMesh.h  OpenGLPipeline.h  OpenGLRenderTarget.h  OpenGLRenderer.h  OpenGLShader.h  OpenGLWindow.h  OpenGLWindowRenderTarget.h
OpenGLRenderer/src/: OpenGLInputManager.cpp  OpenGLMaterial.cpp  OpenGLMesh.cpp  OpenGLPipeline.cpp  OpenGLRenderTarget.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLWindow.cpp  OpenGLWindowRenderTarget.cpp
Rendering/: CMakeLists.txt
Rendering/inc/: Camera.h  Material.h  Mesh.h  MeshImporter.h  RenderPipeline.h  RenderTarget.h  Rendering.h  Shader.h  ShaderImporter.h  SkeletalAnimation.h  Skeleton.h  VertexBuffer.h  Window.h  WindowInput.h
Rendering/inc/Texture/: Texture2D.h
Rendering/inc/UI/: UIElement.h  UIEventResponse.h  UIImage.h
Rendering/inc/UI/Panels/: OverlayPanel.h  UIPanel.h  UIRoot.h
Rendering/src/: Camera.cpp  Material.cpp  Mesh.cpp  MeshImporter.cpp  RenderPipeline.cpp  RenderTarget.cpp  Rendering.cpp  Shader.cpp  ShaderImporter.cpp  SkeletalAnimation.cpp  Skeleton.cpp  VertexBuffer.cpp  Window.cpp  WindowInput.cpp
Rendering/src/Texture/: Texture2D.cpp
Rendering/src/UI/: UIElement.cpp  UIImage.cpp
Rendering/src/UI/Panels/: OverlayPanel.cpp  UIPanel.cpp  UIRoot.cpp
Third Party/: CMakeLists.txt
Third Party/assimp-5.3.1/test/models/glTF2/BoxTexcoords-glTF/: boxTexcoords.gltf_out.glb
Third Party/glfw-3.3.4/docs/: Doxyfile
Third Party/glfw-3.3.4/src/: glfw3.pc
Third Party/nlohmann/: CMakeLists.txt
